# CNN

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
include/: activation.hpp  cnn.hpp  component.hpp  constraints.hpp  conv.hpp  dense.hpp  flatten.hpp  initializers.hpp  loss.hpp  maxpool.hpp
src/: CMakeLists.txt  activation.cpp
tests/: CMakeLists.txt  test_cnn.cpp  test_component.cpp  tests.cpp
